<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imgv_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_dropbox"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_logout"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/btn_logout" />

    <TextView
        android:id="@+id/lbl_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/lbl_no_internet" />
    
    <Button
        android:id="@+id/btn_check_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_refresh"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/btn_check_connection" />

</RelativeLayout>